--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
-  },
-  "keywords": [],
-  "author": "Egamberdiyev Suhrobjon",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "",
+	"type": "module",
+	"main": "server.js",
+	"scripts": {
+		"start": "node src/server.js",
+		"dev": "nodemon test.js"
+	},
+	"keywords": [],
+	"author": "Egamberdiyev Suhrobjon",
+	"license": "ISC",
+	"devDependencies": {
+		"nodemon": "^2.0.20"
+	},
+	"dependencies": {
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2"
+	}
 }
